--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -3,5 +3,7 @@
 <div *ngIf="product">
   <h3> {{ product.name }} </h3>
   <h4> {{ product.price | currency }} </h4>
-  <p>  {{ product.description }} </p>
+  <p> {{ product.description }} </p>
+
+  <button (click)="addToCart(product)">加入購物車</button>
 </div>
