--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,8 @@
 <a [routerLink]="['/']">
   <h1>My Store</h1>
 </a>
-
-<a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
+<a class="button fancy-button" routerLink='/cart'><i class="material-icons">shopping_cart</i>購物車</a>
+<a class="button fancy-button" routerLink='/shipping'><i class="material-icons">card_giftcard</i>寄送</a>
 
 <!--
 Copyright Google LLC. All Rights Reserved.
