--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,3 +4,16 @@
   <span> {{ item.name }} </span>
   <span> {{ item.price | currency }} </span>
 </div>
+1
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+  <div>
+    <label for="name">Name</label>
+    <input id="name" type="text" formControlName="name">
+  </div>
+  <div>
+    <label for="address">Address</label>
+    <input id="address" type="text" formControlName="address">
+  </div>
+
+  <button class="button" type="submit">購買</button>
+</form>
