--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <h1>My Store</h1>
 </a>
 <a class="button fancy-button" routerLink='/cart'><i class="material-icons">shopping_cart</i>購物車</a>
-<a class="button fancy-button" routerLink='/shipping'><i class="material-icons">card_giftcard</i>寄送</a>
+<a class="button fancy-button" routerLink='/shipping'><i class="material-icons">card_giftcard</i>運送費用</a>
 
 <!--
 Copyright Google LLC. All Rights Reserved.
